--- a/index.html
+++ b/index.html
@@ -3,12 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Javon Harper – Portfolio</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-    <h1>Hello, welcome to my portfolio!</h1>
+    <!-- Header -->
+    <header class="site-header">
+        <div class="container header-inner">
+            <h1 class="site-title">Javon Harper</h1>
+            <nav class="main-nav">
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+    </header>
 
-</body>
-</html>
+    <!-- Hero -->
+    <section class="hero">
+        <div class="container">
+            <h2>Master Data Analyst & Problem Solver</h2>
+            <p>Building scalable systems, improving workflow efficiency, and turning messy data into action.</p>
+            <a class="cta" href="#projects">View My Projects</a>
+        </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>
+                I’m a Master Data Analyst experienced in ERP systems, PIM, Power BI dashboards, automation,
+                vendor pricing workflows, inventory reporting, and process optimization.  
+                I create scalable data structures that support operations, procurement, sales, and warehouse teams.
+            </p>
+        </div>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills" class="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <ul class="skill-list">
+                <li>ERP Systems</li>
+                <li>PIM</li>
+                <li>Power BI</li>
+                <li>Python</li>
+                <li>Data Governance</li>
+                <li>DAX</li>
+                <li>Microsoft Fabric</li>
+                <li>Inventory Analysis</li>
+                <li>Automation</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="about">
+        <div class="container">
+            <h2>Projects</h2>
+            <p>Coming soon — Power BI dashboards, ERP/PIM integrations, and automation tools.</p>
+        </div>
+    </section>
