--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Javon Harper – Portfolio</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
 
     <!-- Header -->
@@ -67,3 +68,19 @@
             <p>Coming soon — Power BI dashboards, ERP/PIM integrations, and automation tools.</p>
         </div>
     </section>
+
+    <!-- Contact -->
+    <section id="contact" class="about">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Email: <strong>javonharpe15@yahoo.com</strong></p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <p>© 2025 Javon Harper. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
