--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <nav class="main-nav">
                 <a href="#about">About</a>
                 <a href="#skills">Skills</a>
+                <a href="#experience">Experience</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -25,9 +26,9 @@
     <!-- Hero -->
     <section class="hero">
         <div class="container">
-            <h2>Master Data Analyst & Problem Solver</h2>
-            <p>Building scalable systems, improving workflow efficiency, and turning messy data into action.</p>
-            <a class="cta" href="#projects">View My Projects</a>
+            <h2>Data & Product Analyst · Master Data Governance · Process Optimization</h2>
+            <p>Turning complex data into strategies that drive accuracy, automation, and operational efficiency.</p>
+            <a class="cta" href="https://www.jeharperportfolio.com/" target="_blank">Visit Full Portfolio</a>
         </div>
     </section>
 
@@ -36,9 +37,10 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                I’m a Master Data Analyst experienced in ERP systems, PIM, Power BI dashboards, automation,
-                vendor pricing workflows, inventory reporting, and process optimization.  
-                I create scalable data structures that support operations, procurement, sales, and warehouse teams.
+                Insight-driven Data & Product Analyst with 5+ years of experience across product, data analytics,
+                and operations. Strong background in SQL, Python, Tableau, Power BI, and master data governance.
+                I specialize in transforming messy data into structured systems, workflows, and dashboards that
+                reduce errors, improve decision-making, and scale with the business.
             </p>
         </div>
     </section>
@@ -48,16 +50,54 @@
         <div class="container">
             <h2>Skills</h2>
             <ul class="skill-list">
-                <li>ERP Systems</li>
-                <li>PIM</li>
-                <li>Power BI</li>
+                <li>SQL</li>
                 <li>Python</li>
-                <li>Data Governance</li>
-                <li>DAX</li>
+                <li>Power BI</li>
+                <li>Tableau</li>
+                <li>PIM / ERP</li>
                 <li>Microsoft Fabric</li>
-                <li>Inventory Analysis</li>
-                <li>Automation</li>
+                <li>A/B Testing</li>
+                <li>Product Analytics</li>
+                <li>Workflow Automation</li>
+                <li>Data Governance</li>
             </ul>
+        </div>
+    </section>
+
+    <!-- Experience -->
+    <section id="experience" class="about">
+        <div class="container">
+            <h2>Experience</h2>
+
+            <h3>Master Data Analyst – Safety Test & Equipment Co.</h3>
+            <p>
+                Manage 100K+ SKUs across ERP/PIM systems. Built the company’s Data Governance Program,
+                automated vendor pricing, and created dashboards for inventory, margins, parity, and obsolete items.
+                Reduced pricing update time from 1 week to 1 day and increased task visibility by 40% using Wrike.
+            </p>
+
+            <h3>Operations Analyst – OneH2</h3>
+            <p>
+                Built SQL-connected dashboards for $8.8M of assets, automated BOLs, created hydrogen usage
+                forecasting models saving $1.2M, and integrated Wrike/UpKeep/HEM workflows.
+            </p>
+
+            <h3>Data Analyst Intern – Greenville Fire-Rescue</h3>
+            <p>
+                Built SQL + Python models for KPI analysis, automated Tableau dashboards, and created GIS-based
+                readiness and resource allocation analysis.
+            </p>
+
+            <h3>Data Analyst Apprentice – New Apprenticeship</h3>
+            <p>
+                Developed Tableau dashboards, customer segmentation, and SQL/Python-driven data insights.
+            </p>
+
+            <h3>Supply Chain Analyst – United States Marine Corps</h3>
+            <p>
+                Conducted inventory forecasting, ERP reconciliation, and high-accuracy cycle counts across 7 squadrons.
+                Improved mission readiness and reduced delays in critical supply chains.
+            </p>
         </div>
     </section>
 
@@ -65,7 +105,14 @@
     <section id="projects" class="about">
         <div class="container">
             <h2>Projects</h2>
-            <p>Coming soon — Power BI dashboards, ERP/PIM integrations, and automation tools.</p>
+            <p>See full case studies at <a href="https://www.jeharperportfolio.com/" target="_blank">JEHarperPortfolio.com</a></p>
+
+            <ul>
+                <li><strong>Master Data Governance Program:</strong> Full-cycle product data structure, naming standards, vendor onboarding & lifecycle.</li>
+                <li><strong>Inventory Health Dashboard:</strong> Aging buckets, stock parity, dead stock, cost vs price trends.</li>
+                <li><strong>Hydrogen Forecasting Model:</strong> Predictive model saving over $1.2M annually.</li>
+                <li><strong>ERP–PIM–Power BI Workflow:</strong> Automated item request + reporting system.</li>
+            </ul>
         </div>
     </section>
 
@@ -74,6 +121,7 @@
         <div class="container">
             <h2>Contact</h2>
             <p>Email: <strong>javonharpe15@yahoo.com</strong></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/jeharper25/" target="_blank">linkedin.com/in/jeharper25</a></p>
         </div>
     </section>
 
@@ -84,3 +132,4 @@
 
 </body>
 </html>
+
