--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
             <h3>Master Data Analyst – Safety Test & Equipment Co.</h3>
             <p>
-                Manage 100K+ SKUs across ERP/PIM systems. Built the company’s Data Governance Program,
-                automated vendor pricing, and created dashboards for inventory, margins, parity, and obsolete items.
-                Reduced pricing update time from 1 week to 1 day and increased task visibility by 40% using Wrike.
+                Manage 100K+ SKUs across ERP/PIM systems. Building the company’s Data Governance Program,
+                automated vendor pricing using python scripts, and created dashboards for inventory, margins, parity, and obsolete items.
+                Reduced pricing update time from 1 week to 1 day and increased task visibility by using Sharepoint and PoweBI.
             </p>
 
             <h3>Operations Analyst – OneH2</h3>
